No function change. 1. Use valueOf instead of new for primitive wrapper 2. Remove some unused variables in the codes
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@1075695 13f79535-47bb-0310-9956-ffa450edef68